WR-440: Minor global styling update to fix content being squished up against the breadcrumb bar

--- a/src/web/themes/custom/workbc/scss/layout/_breadcrumbs.scss
+++ b/src/web/themes/custom/workbc/scss/layout/_breadcrumbs.scss
@@ -1,6 +1,7 @@
 .breadcrumb-wrapper {
   box-shadow: $workbc_default_bottom_shadow;
   $breadcrumb-height: 45px;
+  margin-bottom: $workbc_default_spacing;
 
   ul.breadcrumb, 
   ol.breadcrumb {
